# LivingMachine

./: CMakeCache.txt  CMakeLists.txt  Etudes préliminaires.odt  Makefile  Mymakefile~  README.md  cmake_install.cmake  err.txt
Code/: KirbyTrack  KirbyTrack.c  Makefile  Makefile~  Navy  Navy.c  Tracking.c  facedetect.c  fonction.c  fonction.h  gmon.out
Doxy/: Doxyfile
Doxy/html/: _kirby_track_8c.html  _kirby_track_8c.js  _kirby_track_8c_source.html  _navy_8c.html  _navy_8c.js  _navy_8c_source.html  annotated.html  annotated.js  bug.html  classes.html  dir_23fdee2f6995db16c755697cdf620cf4.html  dir_23fdee2f6995db16c755697cdf620cf4.js  facedetect_8c_source.html  files.html  fonction_8c.html  fonction_8c.js  fonction_8c_source.html  fonction_8h.html  fonction_8h.js  fonction_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  navtree.js  pages.html  (+6 more)
Test - SFML/: main  main.c  main.c~
Test moteurs/: Makefile  Makefile~  moteur  moteur.c  moteur.c~
Test-SFML/: test2.c~
Test-opencv/: main.c  main.c~
code/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  Sample1.cpp
code moteurs/: motor-control-serial.cpp
presentation_projet_html/: ProjetInformatiqueRob3-1.html  ProjetInformatiqueRob3-2.html  ProjetInformatiqueRob3.html  ProjetInformatiqueRob3_ind.html
src/: DisplayImage.c  DisplayImage.c~
trash/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  Sample0_display.cpp  cmake_install.cmake  motor-control-serial.cpp
trash/code/: CMakeCache.txt
(+30 files in other folders)
